<resources>
    <string name="app_name">UI</string>
    <string name="action_settings">Settings</string>
    <string name="input_homework_deadline">在此输入截止时间</string>
    <string name="input_homework_content">在此输入作业详细内容</string>
    <string name="input_homework_source">在此输入作业来源</string>
    <string name="button_homework_submit">提交</string>
    <string name="release_title">本周作业</string>
    <string name="information_page_title">个人信息</string>
    <string name="edit_user_info_title">编辑信息</string>
    <string name="num_hint">请输入账号</string>
    <string name="text_id">账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="text_password">密码</string>
    <string name="cb_autologin">自动登录</string>
    <string name="reg">注  册</string>
    <string name="login">登  录</string>
    <string name="head">头像</string>
    <string name="exit">退出</string>
    <string name="back">返回</string>
    <string name="title">标题</string>
    <string name="image">图片</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="set">设置</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="account">账户</string>
    <string name="hint">温馨提示</string>
    <string name="hint_exit">确定退出？</string>
    <string name="til_login">天使之翼</string>
    <string name="appVer">版本号：1.0.0.1 Build0012</string>
    <string name="appDate">发布日期：2012/5/14</string>
    <string name="start">启动</string>
    <string name="stop">停止</string>
    <string name="up">上升</string>
    <string name="down">下降</string>
    <string name="about1">此版本适用于Android2.3及以上固件手机，如果在其他手机上使用本软件造成的问题本人概不负责。本软件的下载安装完全免费，使用过程中产生的GPRS流量费由运营商收取。任何组织或个人不得以任何手段恶意修改本软件，违者将追究其法律责任。</string>
    <string name="str_test">The world won"t care about your self-esteem. The world will expect you to accomplish something before you feel good about yourself.\n\n  这世界并不会在意你的自尊。这世界指望你在自我感觉良好之前先要有所成就。</string>
    <string name="test">测试</string>
    <string name="title_activity_add_course_table">AddCourseTableActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="jwzh">教务账号</string>
    <string name="jwmm">教务密码</string>
    <string name="xzxq">选择学期</string>
    <string name="OK">完成</string>
    <string name="addCourseTable">添加课表</string>
</resources>
