<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="42dp"
    android:background="#56abe4"
    android:orientation="horizontal">
    <Button
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="#56abe4"
        android:text="@string/back"
        android:textColor="#FFFFFF"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/addCourseTable"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/bt_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="#56abe4"
        android:text="@string/OK"
        android:textColor="#FFFFFF"/>

</LinearLayout>
